--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.leaflet-container a {
+    color: #fff;
+}
+
+.leaflet-control-zoom-out,
+.leaflet-control-zoom-in {
+    color: #000 !important;
+}
